     left in tree. (Robert Collins, #140419)

   * Fix selftest semi-random noise during http related tests.
     (Vincent Ladeuil, #140614)

   * Fix failing test by comparing real paths to cover the case where the TMPDIR
     contains a symbolic link.
     (Vincent Ladeuil, #141382).

   * Fix log against smart server branches that don't support tags.
     (James Westby, #140615)

   * Fix 'unprintable error' message when displaying BzrCheckError and 
     some other exceptions on Python 2.5.
     (Martin Pool, #144633)

   * HttpServer and FtpServer need to be closed properly or a listening socket
     will remain opened.
     (Vincent Ladeuil, #140055)

   * The basename, not the full path, is now used when checking whether
     the profiling dump file begins with ``callgrind.out`` or not. This
     fixes a bug reported by Aaron Bentley on IRC. (Ian Clatworthy)

   * Trivial fix for invoking command ``reconfigure`` without arguments.
     (Rob Weir, #141629)

   * ``WorkingTree.rename_one`` will now raise an error if normalisation of the
     new path causes bzr to be unable to access the file. (Robert Collins)

  API BREAKS:

   * ``KnitVersionedFile.add*`` will no longer cache added records even when
     enable_cache() has been called - the caching feature is now exclusively for
     reading existing data. (Robert Collins)

   * The ``VersionedFile`` interface now allows content checks to be bypassed
     by supplying check_content=False.  This saves nearly 30% of the minimum
     cost to store a version of a file. (Robert Collins)

   * Tree's with bad state such as files with no length or sha will no longer
     be silently accepted by the repository XML serialiser. To serialise
     inventories without such data, pass working=True to write_inventory.
     (Robert Collins)

   * ``VersionedFile.fix_parents`` has been removed as a harmful API.
     ``VersionedFile.join`` will no longer accept different parents on either